<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType ="centerCrop"
        android:src="@drawable/blury_background"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id ="@+id/logo"
            android:layout_marginTop="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:drawablePadding ="6dp"
            android:textStyle ="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text ="@string/app_name"
            app:drawableStartCompat="@drawable/ic_kleine_shape" />



        <TextView
            android:id ="@id/splashHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="35sp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text ="@string/splash_text"
            style="@style/h4"
            android:textAlignment ="center"
            android:gravity ="center"
            />

        <TextView
            android:id ="@+id/splash_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/splashHeader"
            app:layout_constraintEnd_toEndOf="@+id/splashHeader"
            app:layout_constraintTop_toBottomOf="@id/splashHeader"
            android:text ="@string/splash_note"
            android:textAlignment = "center"
            style="@style/h2"
            android:gravity ="center"

            android:layout_marginTop="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:id ="@+id/btnSignUp"
            android:layout_height="55dp"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/splash_note"
            app:layout_constraintStart_toStartOf="@+id/splash_note"
            app:layout_constraintEnd_toEndOf="@+id/splash_note"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text ="Sign Up"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:id ="@+id/btnSignIn"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/splash_note"
            app:layout_constraintStart_toStartOf="@+id/splash_note"
            app:layout_constraintEnd_toEndOf="@+id/splash_note"
            app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
            android:text ="Sign In"
            />






    </androidx.constraintlayout.widget.ConstraintLayout>






</FrameLayout>