<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType ="centerCrop"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id ="@+id/logo"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:drawablePadding ="6dp"
            android:textStyle ="bold"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintTop_toTopOf="parent"
            android:text ="@string/app_name"
            app:drawableStartCompat="@drawable/ic_kleine_shape" />



        <TextView
            android:id ="@id/splashHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="35sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@id/logingl"
            android:text ="@string/register_heading"
            style="@style/h4"
            android:textAlignment ="center"
            android:gravity ="center"
            />

        <TextView
            android:id ="@+id/sign_in_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintTop_toBottomOf="@id/splashHeader"
            android:text ="@string/login_link"
            android:textAlignment = "center"
            style="@style/h2"
            android:gravity ="center"

            android:layout_marginTop="15dp"
            />

        <EditText
            android:id ="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintEnd_toEndOf="@id/logingr"
            app:layout_constraintTop_toBottomOf="@id/sign_in_link"
            android:layout_marginTop="50dp"
            android:inputType ="text"
            android:hint="First Name"
            />

        <EditText
            android:id ="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintEnd_toEndOf="@id/logingr"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            android:layout_marginTop="15dp"
            android:inputType ="text"
            android:hint="Last Name"
            />

        <EditText
            android:id ="@+id/email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintEnd_toEndOf="@id/logingr"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            android:layout_marginTop="15dp"
            android:inputType ="textEmailAddress"
            android:hint="Email"
            />

        <EditText
            android:id ="@+id/password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            style="@style/editText"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintEnd_toEndOf="@id/logingr"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="15dp"
            android:inputType ="textPassword"
            android:hint="Password"
            />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:layout_width="0dp"
            android:id ="@+id/btnSignUp"
            android:layout_height="55dp"
            style="@style/blueButtonStyle"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/logingl"
            app:layout_constraintEnd_toEndOf="@+id/logingr"
            app:spinning_bar_color="@color/white"
            android:text ="Sign Up"
            />

        <ImageView
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_height="wrap_content"
            android:src ="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/logingl"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="Facebook"
            app:layout_constraintStart_toStartOf="@id/facebook_login"
            app:layout_constraintEnd_toEndOf="@id/facebook_login"
            app:layout_constraintTop_toTopOf="@id/facebook_login"
            app:layout_constraintBottom_toBottomOf="@id/facebook_login"/>

        <ImageView
            android:id="@+id/google_login"
            android:layout_width="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_height="wrap_content"
            android:src ="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/logingr"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="Google"
            app:layout_constraintStart_toStartOf="@id/google_login"
            app:layout_constraintEnd_toEndOf="@id/google_login"
            app:layout_constraintTop_toTopOf="@id/google_login"
            app:layout_constraintBottom_toBottomOf="@id/google_login"/>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logingl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logingr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>